# footy

./: Cargo.toml  README.md  id_rgb.csv  teams.csv
src/: lib.rs  main.rs
