[package]
name = "footy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
simple_logger = "4.0.0"
tokio = { version = "1.15.0", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.6", features = ["json"] }
dotenv = "0.15.0"
futures = "0.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
colored = "2.0.4"
clap = "4.4.7"
csv = "1.3.0"
